@@ -12,6 +12,7 @@ version 0.8.6 - Not released, available at https://simupop.svn.sourceforge.net/s
   - BUG: fix a bug that is related to reference count of loaded lists.
   - CHG: allow sample size > population size (give a warning rather than error)
   - CHG: allow recombination rate > 0.5 (adjust to 0.5 and issue a warning)
+  - NEW: allow longarg names in option jump and jumpIfFalse in simuOpt.py
 
 version 0.8.5 - (Rev 1488) Apr 3, 2008
   - BUG: fix a bug that prevents a cloned simulator from evolving again.
